Revision history for Test-Some

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]
  - The module doesn't monkeypatch Test::More::subtest anymore, but just wrap
    it within the namespace it's invoked in. (GH#1)

  [ NEW FEATURES ]

  [ STATISTICS ]

0.0.3 2015-11-05
  - Class::Method::Modifiers wasn't picked as one of the dependencies by
    dzilla.

  [ STATISTICS ]
    - code churn: 2 files changed, 22 insertions(+), 2 deletions(-)

0.0.2 2015-11-04
  - Obfuscate 'package Test::More' so CPAN doesn't think we're claiming the
    namespace.

  [ STATISTICS ]
    - code churn: 2 files changed, 10 insertions(+), 1 deletion(-)

0.0.1 2015-11-04
  - First version, unleashed on an unsuspecting world.

  [ STATISTICS ]
    - code churn: 2 files changed, 30 insertions(+)